# xarray-histogram

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  changelog.md  conf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  tests.yml
ci/: pre-commit.sh  requirements-dev.yml
docs/: Makefile  requirements.txt
docs/source/: accessor.rst  api.rst  conf.py  index.rst  install.rst  perf_dask.ipynb  perf_numpy.ipynb  performances.ipynb  usage.rst
docs/source/_references/: xarray_histogram.core.rst  xarray_histogram.rst
docs/source/_templates/: footer-left.html  layout.html
docs/source/_templates/autosummary/: module.rst
src/xarray_histogram/: __init__.py  accessor.py  core.py
tests/: test_accessor.py  test_histogram.py  util.py
tests/integration/: test_histogram.py
tests/unit/: test_accessor.py  test_histogram.py
